homelab/k8s/blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      volumes:
        - name: ssh-key-mount
          secret:
            secretName: ssh-key-secret
        - name: static-files
          emptyDir: {}
      containers:
        - name: blog
          image: nginx:1.27-alpine
          resources:
            limits:
              memory: "500Mi"
              cpu: "200m"
            requests:
              memory: "200Mi"
              cpu: "100m"
          volumeMounts:
            - name: static-files
              readOnly: true
              mountPath: /usr/share/nginx
        - name: hugo
          securityContext:
            runAsUser: 100
          image: heschlie/blog-puller:v1.2.5
          resources:
            limits:
              memory: "200Mi"
              cpu: "100m"
            requests:
              memory: "100Mi"
              cpu: "50m"
          volumeMounts:
            - name: ssh-key-mount
              readOnly: true
              mountPath: /home/blogger/keys
            - name: static-files
              mountPath: /home/blogger/static-files
