homelab/k8s/blog/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: blog
spec:
  selector:
    app:  blog
  ports:
    - name:  http
      port:  80
      targetPort:  80
